# vmt-parser

./: Cargo.toml  flake.nix
.github/workflows/: ci.yml
examples/: dir.rs  parse.rs
src/: error.rs  lib.rs  material.rs
src/data/: mod.rs  texture_transform.rs
src/material/: cable.rs  eyerefract.rs  lightmappedgeneric.rs  mod.rs  modulate.rs  refract.rs  replacements.rs  sky.rs  sprite.rs  spritecard.rs  subrect.rs  unlitgeneric.rs  unlittwotexture.rs  vertexlitgeneric.rs  water.rs  worldvertextransition.rs
src/vdf/: error.rs  parser.rs  reader.rs
src/vdf/entry/: statement.rs  table.rs  value.rs
tests/: parse.rs
tests/data/: blendrocktograss002.vmt  concretefloor003.vmt  handrail128_skin2.vmt  mvm_backpack.vmt  patch.vmt  water_murky.vmt
tests/snapshots/: parse__tests__data__blendrocktograss002.vmt.snap  parse__tests__data__concretefloor003.vmt.snap  parse__tests__data__handrail128_skin2.vmt.snap  parse__tests__data__mvm_backpack.vmt.snap  parse__tests__data__patch.vmt.snap  parse__tests__data__patch.vmt_resolved.snap  parse__tests__data__shot2_subrect.vmt.snap  parse__tests__data__water_murky.vmt.snap
