[package]
name = "vmt-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.50"
miette = "5.10.0"
vdf-reader = { version = "0.1", path = "../vdf-reader" }
serde = { version = "1.0.193", features = ["derive"] }
serde_repr = "0.1.17"

[dev-dependencies]
test-case = "3.3.1"
insta = { version = "1.34.0", features = ["ron"] }
miette = { version = "5.10.0", features = ["fancy"] }