[package]
name = "vmt-parser"
version = "0.1.1"
edition = "2021"
description = "Rust parser for valve vmt files."
license = "MIT"
repository = "https://github.com/icewind1991/vdf-parser"
rust-version = "1.65.0"

[dependencies]
thiserror = "1.0.50"
miette = "5.10.0"
vdf-reader = "0.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_repr = "0.1.17"

[dev-dependencies]
test-case = "3.3.1"
insta = { version = "1.34.0", features = ["ron"] }
miette = { version = "5.10.0", features = ["fancy"] }
walkdir = "2.4.0"
