[package]
name = "vmt-parser"
version = "0.2.0"
edition = "2021"
description = "Rust parser for valve vmt files."
license = "MIT"
repository = "https://github.com/icewind1991/vdf-parser"
rust-version = "1.70.0"

[dependencies]
thiserror = "2.0.11"
miette = "7.5.0"
vdf-reader = "0.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_repr = "0.1.19"

[dev-dependencies]
test-case = "3.3.1"
insta = { version = "1.42.1", features = ["ron"] }
miette = { version = "7.5.0", features = ["fancy"] }
walkdir = "2.5.0"
